--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Word Seekler</title>
+    <title>Word Seeker</title>
 
     <% if (process.env.NODE_ENV === 'production' &&
     process.env.REACT_APP_GOOGLE_MEASUREMENT_ID != null) { %>
